# pysidemap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci
src/: pys
src/pysidemap/: __init__.py  exceptions.py
src/pysidemap/coordinate_systems/: __init__.py  crs_manager.py
src/pysidemap/data_providers/: __init__.py
src/pysidemap/layers/: __init__.py  base_layer.py  raster_layer.py
src/pysidemap/utils/: __init__.py  types.py
src/pysidemap/validation/: __init__.py  direct_validation.py  simple_validation.py  test_phase2_validation.py
src/pysidemap/widgets/: __init__.py  gis_graphics_view.py
tests/: __
tests/unit/: test_pysidemap_package.py
